HelloUltraviolet/Fixtures/RejectedSource/Expressions/IntLiteralCheckRange/Source/Main.uv
//! Rejected integer literal specimen for checked integer range typing.

public procedure intLiteralCheckRangeReference() -> i8 {
    return 128
}
